# C-Plus-Plus-ProjectTemplate

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
